[package]
name = "rlox"
version = "0.1.0"
authors = ["nifemibosun <nifemibosun70@gmail.com>"]
edition = "2021"

[[bin]]
name = "gen_ast"
path = "src/tools/generate_ast.rs"

[[bin]]
name = "rlox"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
